# klee

./: .cirrus.yml  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README-UTBot.md  build.sh
.github/workflows/: build.yaml  debug-build.yaml.tmp
cmake/: compiler_warnings.cmake
configs/: annotations.json  options.json  taint-annotations.json
fuzz_ex/: a.c  b.c  c.c  d.c  e.c  f.c  g.c  h.c  i.c  j.c
include/klee/: KLEEConfig.h  klee.h
include/klee/ADT/: DisjointSetUnion.h  KTest.h  (+7 more)
lib/: CMakeLists.txt
lib/ADT/: CMakeLists.txt  SparseStorage.cpp
lib/Basic/: CMakeLists.txt  KTest.cpp
lib/Core/: AddressManager.cpp  AddressManager.h  AddressSpace.cpp  AddressSpace.h  Annotation.cpp  BackwardSearcher.cpp  BackwardSearcher.h  BidirectionalSearcher.cpp  BidirectionalSearcher.h  CMakeLists.txt  CodeLocation.cpp  Composer.cpp  Composer.h  ConstantAddressSpace.cpp  ConstantAddressSpace.h  ConstructStorage.h  CoreStats.cpp  CoreStats.h  DistanceCalculator.cpp  DistanceCalculator.h  EventRecorder.h  ExecutionState.cpp  ExecutionState.h  Executor.cpp  Executor.h  ExecutorUtil.cpp  ExternalDispatcher.cpp  FunctionAnnotation.cpp  ImpliedValue.cpp  Initializer.cpp  Initializer.h  KTestBuilder.cpp  KTestBuilder.h  LemmaUpdater.cpp  LemmaUpdater.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  MergeHandler.cpp  (+36 more)
lib/Core/CXXTypeSystem/: CXXTypeManager.cpp
lib/Expr/: AlphaBuilder.cpp  ArrayCache.cpp  ArrayExprOptimizer.cpp  ArrayExprVisitor.cpp  Assignment.cpp  CExprWriter.cpp  CMakeLists.txt  Constraints.cpp  Expr.cpp  ExprBuilder.cpp  ExprEvaluator.cpp  ExprPPrinter.cpp  ExprSMTLIBPrinter.cpp  ExprUtil.cpp  ExprVisitor.cpp  IndependentConstraintSetUnion.cpp  IndependentSet.cpp  Lemma.cpp  Lexer.cpp  Parser.cpp  Path.cpp  SourceBuilder.cpp  SymbolicSource.cpp  Updates.cpp
lib/Fuzzer/: CMakeLists.txt  Cargo.toml
lib/Fuzzer/src/: lib.rs
lib/Module/: Annotation.cpp  AnnotationsData.cpp  CMakeLists.txt  CallRemover.cpp  CodeGraphDistance.cpp  CodeGraphInfo.cpp  DbgIntrinsicUnwrapperPass.cpp  DbgIntrinsicWrapper.cpp  DbgIntrinsicWrapperPass.cpp  IntrinsicCleaner.cpp  KInstruction.cpp  KModule.cpp  Locations.cpp  ModuleUtil.cpp  Optimize.cpp  Passes.h  RaiseAsm.cpp  SarifReport.cpp  TaintAnnotation.cpp  Target.cpp  TargetForest.cpp
lib/Runner/: CMakeLists.txt  run_klee.cpp
lib/Solver/: AlphaEquivalenceSolver.cpp  AssignmentValidatingSolver.cpp  BitwuzlaBuilder.cpp  BitwuzlaSolver.cpp  CMakeLists.txt  CachingSolver.cpp  CexCachingSolver.cpp  ConcretizingSolver.cpp  ConstructSolverChain.cpp  DummySolver.cpp  FastCexSolver.cpp  Fuzzer.cpp  FuzzingSolver.cpp  IREmitter.cpp  IncompleteSolver.cpp  IndependentSolver.cpp  MetaSMTBuilder.h  MetaSMTSolver.cpp  QueryLoggingSolver.cpp  QueryLoggingSolver.h  STPBuilder.cpp  STPSolver.cpp  STPSolver.h  Solver.cpp  SolverCmdLine.cpp  SolverImpl.cpp  ValidatingSolver.cpp  Z3BitvectorBuilder.cpp  Z3Builder.cpp  Z3Builder.h  Z3CoreBuilder.cpp  Z3Solver.cpp  Z3Solver.h
lib/Support/: CMakeLists.txt  DebugFlags.cpp  ErrorHandling.cpp
runtime/: CMakeLists.txt
runtime/Mocks/: models.c
runtime/POSIX/: fd.c  fd.h  fd_init.c  input_output.c  klee_init_env.c
runtime/Runtest/: CMakeLists.txt  intrinsics.c
runtime/klee-libc/: CMakeLists.txt  ctlz.c
scripts/: cooddy_annotations.py  kleef  replay.sh  run_tests_with_mocks.py
submodules/: pugiconfig.hpp
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/ArrayOpt/: test_and.c
test/Bidirectional/: abs.c  abs.c.ksummary.good  fib-sum-dec.c  loop-unreach.c
test/Expr/: ReadExprConsistency.c
test/Feature/: BlockPath.ll  DanglingConcreteReadExpr.c  Dubois-025.c  DumpStatesOnHalt.c  EntryPointUclibcPosix.c  KleeStats.c  MockPointersDeterministic.c  MockStrategies.c  MultipleWriteResolution.c  RaiseAsm.c  TaintTest.cpp  TestSeeding.c  VarArgAlignment.c  VarArgByVal.c  WriteCov.c
test/Floats/: ceil.c  exp.c  fegetround_fesetround_symbolic.c  floor.c  get_and_set_rounding_mode_symbolic.c
test/Industry/: AssignNull_Scene_BadCase02.c  AssignNull_Scene_BadCase04.c  BadCase01_SecB_ForwardNull.c  CheckNull_Scene_BadCase02.c  CheckNull_Scene_BadCase04.c  FN_SecB_ForwardNull_filed.c  MacroLocalization.c  MacroLocalization.c.sarif  NullReturn_BadCase_WhiteBox01.c  NullReturn_Scene_BadCase01.c  NullReturn_Scene_BadCase02.c  NullReturn_Scene_BadCase02.c.json  NullReturn_Scene_BadCase03.c  NullReturn_Scene_BadCase04.c  NullReturn_Scene_BadCase06.c  NullReturn_Scene_BadCase08.cpp  SecB_ForwardNull.c  StrangeBugInIFDS.c  StrangeBugInIFDS.c.sarif  ZeroDeref_Scene_BadCase02.c  ZeroDeref_Scene_BadCase05.c  egcd3-ll_valuebound10.c  fn_reverse_null.c  fp_forward_null_address.c  fp_null_returns_self_define.c  fp_null_returns_self_define2.c  if2.c  ll_create_rec-alloca-2.c  test.c  while_true.c  wrapped_btor2c-lazyMod.adding.1.prop1-back-serstep.c
test/Solver/: CallComputeValue.c  CexCacheValidityCoresCheck.c  FastCexSolver.kquery  Z3ConstantArray.c  pals_floodmax.5.2.ufo.BOUNDED-10.pals.c  sina2f.c
test/regression/: 2015-08-05-invalid-fork.c  2023-02-01-replay-test-with-lazy-initialized-objects.c  2023-10-02-test-from-mocked-global.c  2023-10-04-email_spec0_product16.cil.c  2023-10-06-Dubois-015.c  2023-10-12-inner-types-fix.c  2023-10-13-kbfiltr.i.cil-2.c  2024-07-12-symbolic-size-minimization.c  2024-08-29-mock-with-posix.c
tools/: CMakeLists.txt
tools/instrumentation/: CMakeLists.txt  instrumenter.py
tools/kleaver/: CMakeLists.txt  main.cpp
tools/klee/: CMakeLists.txt  main.cpp
tools/klee-replay/: file-creator.c  klee-replay.c
tools/ktest-gen/: ktest-gen.cpp
tools/ktest-randgen/: ktest-randgen.cpp
tools/ktest-tool/: ktest-tool
tools/label-adder/: CMakeLists.txt  Includes.hpp  LabelerASTVisitor.cpp  LabelerFrontendAction.cpp  LabelerFrontendActionFactory.cpp  LabelerFrontendActionFactory.hpp  Makefile
unittests/: CMakeLists.txt
unittests/Annotations/: AnnotationsTest.cpp
unittests/Assignment/: AssignmentTest.cpp
unittests/Expr/: ArrayExprTest.cpp  ExprTest.cpp
unittests/Solver/: SolverTest.cpp  Z3SolverTest.cpp
(+143 files in other folders)
