[package]
name = "kleeFuzzer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
name = "kleeFuzzer"

[dependencies]
libafl = "0.8.2"
libafl_targets =  { version = "0.8.2", features = ["sancov_pcguard_hitcounts", "pointer_maps"]}
libc = "0.2.137"
serde = { version = "1.0", default-features = false, features = ["alloc"] }